# Django-Requests-Tracker

./: .gitattributes  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml  requirements.txt
.github/workflows/: quality.yml  smokeshow.yml
example_project/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  run_async.py
example_project/core/management/commands/: create_demo_data.py  run_demo_requests.py  run_demo_requests_parallel.py
example_project/example_project/: settings.py  urls.py
example_project/ninja_app/: apps.py  models.py  views.py
example_project/ninja_app/migrations/: 0001_initial.py
example_project/restframework_app/: apps.py  models.py  serializers.py  views.py
example_project/restframework_app/migrations/: 0001_initial.py
requests_tracker/: __init__.py  apps.py  base_collector.py  main_request_collector.py  middleware.py  settings.py  stack_trace.py  urls.py  views.py
requests_tracker/headers/: header_collector.py
requests_tracker/sql/: dataclasses.py  sql_collector.py  sql_hook.py  sql_parser.py  sql_tracker.py  tracking.py  utils.py
requests_tracker/static/requests_tracker/css/: base.css  base.css.map  bulma-prefers-dark.css  index.css  index.css.map  request-details.css  request-details.css.map  single-request.css  single-request.css.map  variabels.css  variabels.css.map
requests_tracker/static/requests_tracker/sass/: base.sass  index.sass  request-details.sass  variabels.sass
requests_tracker/templates/: base.html  django_settings.html  index.html  request_details.html
requests_tracker/templates/components/: header_table.html  table.html
requests_tracker/templates/partials/: loading_indicator_partial.html  request_details_headers_partial.html  request_details_partial.html  request_details_sql_partial.html  request_list_item.html  request_list_only_partial.html  request_list_partial.html
requests_tracker/templatetags/: format_tags.py  style_tags.py
tests/: conftest.py  constants.py  django_settings.py  fake_views.py  test_base_collector.py  test_main_request_collector.py  test_middleware.py  test_views.py  urls.py
tests/headers/: test_header_collector.py
tests/sql/: test_sql_collector.py  test_sql_tracker.py
tests/templatetags/: conftest.py  test_format_tags.py  test_style_tags.py
